--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #000000;
   --foreground: #171717;
 }
 
@@ -11,4 +11,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Poppiins, sans-serif;
+  color: #ffff;
 }
